Added Background Music

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <audio src="Music/Mission (2nd Mix).mp3" autoplay loop>
+        Error: your web browser does not support this audio player.
+        </audio>
     <div class="container">
         <div class="doit-app">
             <h2>Your Agenda<img src="images/icon.png" alt=""></h2>
